--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ja.xcloc/Source Contents/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ja.xcloc/Source Contents/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -659,6 +659,36 @@
         }
       }
     },
+    "takeViewShotButton.button.tapHereToShare" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tap Here to Share"
+          }
+        }
+      }
+    },
+    "takeViewShotButton.imageShotPreparationComplete.instruction" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Image file successfully prepared for export."
+          }
+        }
+      }
+    },
+    "takeViewShotButton.preview.imageToShare" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Prepared Image"
+          }
+        }
+      }
+    },
     "unit.daysOf:%lld" : {
       "extractionState" : "manual",
       "localizations" : {
